--- a/Roommates/app/src/main/AndroidManifest.xml
+++ b/Roommates/app/src/main/AndroidManifest.xml
@@ -9,8 +9,6 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
-
         <activity
             android:name=".Login"
             android:label="@string/app_name" >
@@ -20,15 +18,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".Register"
             android:label="@string/app_name" >
         </activity>
-
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name=".NavigationDrawerMain"
+            android:label="@string/title_activity_navigation_drawer_main" >
         </activity>
     </application>
 
